--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cordova-wheel-selector-plugin": "^1.1.7",
     "core-js": "^2.6.12",
     "hammerjs": "^2.0.8",
+    "howler": "^2.2.1",
     "html2canvas": "^1.0.0-rc.7",
     "ionic": "^5.4.16",
     "ionic-long-press": "^2.0.3",
